--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -160,16 +160,23 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 
 
     \vspace{-0.2cm}
-    
     \scriptsize{
-      \hspace{-0.8cm}
-      Chair: Prof. Dr. J\'{e}r\^{o}me Faist \\
-      \hspace{-0.8cm}
-      Examiner: Prof. Dr. G\"{u}nther Dissertori\\
-      \hspace{-0.8cm}
-      Co-examiners: Prof. Dr. Rainer Wallny \\
-      \hspace{0.7cm} Dr. Dominik Dannheim \\
+      \begin{tabular}{l l}
+        Chair: & Prof. Dr. J\'{e}r\^{o}me Faist \\
+        Examiner: & Prof. Dr. G\"{u}nther Dissertori\\
+        Co-examiners: &Prof. Dr. Rainer Wallny \\
+        &  Dr. Dominik Dannheim \\
+      \end{tabular}
     }
+    % \scriptsize{
+    %   \hspace{-0.8cm}
+    %   Chair: Prof. Dr. J\'{e}r\^{o}me Faist \\
+    %   \hspace{-0.8cm}
+    %   Examiner: Prof. Dr. G\"{u}nther Dissertori\\
+    %   \hspace{-0.8cm}
+    %   Co-examiners: Prof. Dr. Rainer Wallny \\
+    %   \hspace{0.7cm} Dr. Dominik Dannheim \\
+    % }
 
     % \hspace{5cm}
     % \vspace{-3cm}
