Thesis: registration confirmed. The dissertation No. 24216. yaaaay

--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -9,7 +9,7 @@
 %	HEADING SECTIONS
 %----------------------------------------------------------------------------------------
 
-\textsc{\LARGE DISS. ETH NO. xxxxx}\\[1.5cm] % Name of your university/college
+\textsc{\LARGE DISS. ETH NO. 24216}\\[1.5cm] % Name of your university/college
 %% \textsc{\Large Major Heading}\\[0.5cm] % Major heading such as course name
 %% \textsc{\large Minor Heading}\\[0.5cm] % Minor heading such as course title
 
