--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -114,7 +114,6 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 \renewcommand{\inserttotalframenumber}{\pageref{lastslide}}
 
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %         SLIDE             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -139,35 +138,46 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
     \includegraphics[width=1.0\paperwidth]{figures/CLIC_canvas_accelerator.jpg}}
   
   
-  \begin{frame}
+  \begin{frame}[plain]
     
 
-    \hbox to \textwidth{
-      \includegraphics[width=0.15\textwidth]{figures/logo_cern.pdf}
-      \hfill
-      \includegraphics[width=0.2\textwidth]{figures/logo_clic.pdf}
-      % \includegraphics[width=0.2\textwidth]{figures/ETHZ_logo.pdf}
-      % \includegraphics[width=0.1\textwidth]{figures/CERN_logo.jpg}
-      % \includegraphics[width=0.1\textwidth]{figures/CLIC_logo}
-    }
-    % \hspace{-0.5cm}
-    % \includegraphics[width=0.1\textwidth]{figures/logo_cern.pdf}
-    % \hspace{8.5cm}
-    % \includegraphics[width=0.1\textwidth]{figures/logo_clic.pdf}
+    % \hbox to \textwidth{
+    %   \includegraphics[width=0.15\textwidth]{figures/logo_cern.pdf}
+    %   \hfill
+    %   \includegraphics[width=0.2\textwidth]{figures/logo_clic.pdf}
+    % }
 
-    \vspace{0.3cm}
+    \begin{columns}
+      \column{0.2\textwidth}
+      \centering
+      \includegraphics[width=0.5\textwidth]{figures/logo_cern.pdf}
+      \column{0.6\textwidth}
+      \column{0.2\textwidth}
+      \centering
+      \includegraphics[width=0.6\textwidth]{figures/logo_clic.pdf}
+    \end{columns}
+
+    \vspace{1.3cm}
     \titlepage
 
 
     \vspace{-0.2cm}
-    \scriptsize{
-      \begin{tabular}{l l}
-        Chair: & Prof. Dr. J\'{e}r\^{o}me Faist \\
-        Examiner: & Prof. Dr. G\"{u}nther Dissertori\\
-        Co-examiners: &Prof. Dr. Rainer Wallny \\
-        &  Dr. Dominik Dannheim \\
-      \end{tabular}
-    }
+
+    \begin{columns}
+      \column{0.25\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/ETHZ_logo.pdf}
+      \column{0.32\textwidth}
+      \column{0.43\textwidth}
+      \scriptsize{
+        \begin{tabular}{l l}
+          Chair: & Prof. Dr. J\'{e}r\^{o}me Faist \\
+          Examiner: & Prof. Dr. G\"{u}nther Dissertori\\
+          Co-examiners: &Prof. Dr. Rainer Wallny \\
+                 &  Dr. Dominik Dannheim \\
+        \end{tabular}
+      }
+    \end{columns}
     % \scriptsize{
     %   \hspace{-0.8cm}
     %   Chair: Prof. Dr. J\'{e}r\^{o}me Faist \\
