[presentation] small changes

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -437,13 +437,13 @@
     \item High coverage: $\sim30$~mm of inner radius and
       $\theta_{min}\sim8^{\circ}$
     \item B-field: \textcolor{Blue}{4~T}
-    \item Single point resolution of
+    \item Hit resolution of
       \textcolor{Blue}{$\sim$\SI{3}{\micro\meter}}
       \begin{itemize}
       \item Pixel detectors
       \end{itemize}
     \item Low material budget: $<0.2\%$~X\textsubscript{0}/layer and
-      beam-pipe:
+      beam-pipe
       \begin{itemize}
       \item Forced airflow cooling
       \item Low-power electronics
